prusti/tests/parse/ui/simple_forall.stderr
error: failed to parse forall bounded variable list
 --> $DIR/simple_forall.rs:7:19
  |
7 | #[requires="forall x: 32, y: usize :: {} x > 0 ==> x > -1"]
  |                   ^^^^^^^^^^^^^^^^

error: failed to parse forall expression
  --> $DIR/simple_forall.rs:10:12
   |
10 | #[requires="forall"]
   |            ^^^^^^^^

error: forall can have only one implication
  --> $DIR/simple_forall.rs:13:12
   |
13 |   #[requires="forall x: i32, y: usize :: {x + 2, x + 3; x + 4} x > 0 ==> x + 2 > 2
   |  ____________^
14 | |     ==> true"]
   | |_____________^

error: aborting due to 3 previous errors

